--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,25 +2,28 @@
 # Contributor: Lucien Immink <l.immink@student.fnt.hvu.nl>
 
 pkgname=gftp
-pkgver=2.0.19
-pkgrel=10
+pkgver=2.7.0b
+pkgrel=1
 pkgdesc="A multithreaded ftp client for X Windows"
 arch=('x86_64')
 url="https://www.gftp.org/"
 license=('GPL2')
 depends=('gtk2' 'openssl' 'readline')
-source=(https://www.gftp.org/$pkgname-$pkgver.tar.bz2)
-md5sums=('5183cb4955d94be0e03c892585547c64')
+makedepends=('intltool')
+#source=(https://www.gftp.org/$pkgname-$pkgver.tar.bz2)
+source=("gftp-$pkgver.tgz::https://github.com/masneyb/gftp/archive/refs/tags/$pkgver.tar.gz")
+md5sums=('5220e212959ae3e3273ee6493e64b312')
 
 prepare() {
-   cd $pkgname-$pkgver
+   cd "$pkgname-$pkgver"
    # openssl 1.1 compatibility
-   sed -e 's|SSL_library_init|SSL_CTX_new|g' -i configure
+   #sed -e 's|SSL_library_init|SSL_CTX_new|g' -i configure
 }
 
 build() {
    cd "$srcdir/$pkgname-$pkgver"
-   ./configure --prefix=/usr --mandir=/usr/share/man
+   ./autogen.sh
+   ./configure --prefix=/usr --mandir=/usr/share/man #--enable-gtk3
    make
 }
 
