db-move: moved pandoc from [community-staging] to [community] (x86_64)
git-svn-id: file:///srv/repos/svn-community/svn@950421 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -2,8 +2,8 @@
 # Contributor: Arch Haskell Team <arch-haskell@haskell.org>
 
 pkgname=pandoc
-pkgver=2.13
-pkgrel=31
+pkgver=2.14
+pkgrel=1
 pkgdesc='Conversion between markup formats'
 url='https://pandoc.org'
 license=('GPL')
@@ -21,24 +21,19 @@ depends=('ghc-libs' 'haskell-http' 'haskell-juicypixels' 'haskell-sha' 'haskell-
          'haskell-http-types' 'haskell-safe' 'haskell-split' 'haskell-texmath' 'haskell-network'
          'haskell-pandoc-types' 'haskell-random' 'haskell-scientific' 'haskell-tagsoup'
          'haskell-temporary' 'haskell-text-conversions' 'haskell-network-uri'
-         'haskell-unicode-transforms' 'haskell-unordered-containers' 'haskell-zip-archive'
-         'haskell-xml' 'haskell-xml-conduit' 'haskell-zlib')
-optdepends=('pandoc-citeproc: for citation rendering with pandoc-citeproc filter'
-            'pandoc-crossref: for numbering figures, equations, tables and cross-references to them with pandoc-crossref filter'
+         'haskell-unicode-collation' 'haskell-unicode-transforms' 'haskell-unordered-containers'
+         'haskell-zip-archive' 'haskell-xml' 'haskell-xml-conduit' 'haskell-zlib')
+optdepends=('pandoc-crossref: for numbering figures, equations, tables and cross-references to them with pandoc-crossref filter'
             'texlive-core: for pdf output')
 conflicts=('haskell-pandoc')
 replaces=('haskell-pandoc')
 makedepends=('ghc' 'uusi' 'haskell-diff' 'haskell-tasty' 'haskell-tasty-hunit' 'haskell-tasty-lua'
              'haskell-tasty-quickcheck' 'haskell-tasty-golden' 'haskell-quickcheck')
-source=("https://hackage.haskell.org/packages/archive/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz"
-        haddock-library-1.10.patch)
-sha512sums=('c894f59e7ff57603fd6a60d11880b9fd6d6e206247346f77070b176fed6f359b3d5a5ba984803717ac4a4e5c038ad0912513da091d4b8672df63af17d21627a8'
-            'f6b0fc90d42e2a02c101e0ba3f86884cb957392b0a1d351f63459780df57a4db51bd9ef72230cd0060e5247fa9a0b5274701bb663163561a932e6aed4e0d5b07')
+source=("https://hackage.haskell.org/packages/archive/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha512sums=('ca763b3e1c64cc297f46492105353270dc71af1c8c27d874704749a9327954fe6ee1b4a1ca4029984f541a9e7438b84824f6eea3254c60021a3ae4b6a37bd2af')
 
 prepare() {
     cd $pkgname-$pkgver
-    patch -p0 -i ../haddock-library-1.10.patch
-    uusi -u attoparsec -u haddock-library -u random -u texmath $pkgname.cabal
 
     # TODO: find a better solution
     sed -i "s|let env' = dynlibEnv ++ |let env' = dynlibEnv ++ [(\"LD_LIBRARY_PATH\", \"$PWD/dist/build\")] ++ |" test/Tests/Command.hs
